--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ frontend/.DS_Store
 model_and_api/__pycache__/
 model_and_api/.pynb_checkpoints/
 model_and_api/uploads/        # uploaded MRI images (runtime files)
+model_and_api/model.h5
 *.pyc
 *.pyo
 *.pyd
